[gd_scene load_steps=13 format=3 uid="uid://bqjbewhv2mf4t"]

[ext_resource type="Script" uid="uid://c7eagduyswmvv" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ResearcherGrid/researcher_grid.gd" id="1_rkkng"]
[ext_resource type="PackedScene" uid="uid://m5qomxk6amc4" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/GridSelect/GridSelect.tscn" id="3_40vgl"]
[ext_resource type="PackedScene" uid="uid://nl3g28hein3g" path="res://UI/ResourceItem/ResourceItem.tscn" id="3_mlyn8"]
[ext_resource type="PackedScene" uid="uid://c5ld7n1ycuql2" path="res://UI/Buttons/IconBtn/IconBtn.tscn" id="4_sm426"]
[ext_resource type="PackedScene" uid="uid://cxkkni8jbnrqq" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/StoreGrid/parts/DetailPanel/DetailPanel.tscn" id="4_wj66r"]
[ext_resource type="PackedScene" uid="uid://dk5255oi6br8j" path="res://Components/TransitionScreen/TransistionScreen.tscn" id="5_i3ues"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gm34h"]

[sub_resource type="Shader" id="Shader_yfx1v"]
code = "shader_type canvas_item;

uniform float speed : hint_range(0.0, 5.0) = 1.0;
uniform float zoom : hint_range(0.1, 10.0) = 3.0;
uniform float line_thickness : hint_range(0.001, 0.05) = 0.02;
uniform float glow_strength : hint_range(0.0, 2.0) = 0.5;
uniform vec3 line_color : source_color = vec3(0.0, 1.0, 1.0); // Cyan
uniform float alpha : hint_range(0.0, 1.0) = 1.0;
uniform bool moving = true;
uniform float angle : hint_range(0.0, 6.2831853) = 0.0;

// Radius around center that fades out grid lines
uniform float center_falloff_radius : hint_range(0.0, 2.0) = 0.7;
uniform float center_falloff_softness : hint_range(0.001, 1.0) = 0.3;

void fragment() {
	vec2 uv = (UV - 0.5) * 2.0;
	uv.x *= SCREEN_PIXEL_SIZE.y / SCREEN_PIXEL_SIZE.x;

	// Rotate UV coordinates
	float cos_a = cos(angle);
	float sin_a = sin(angle);
	vec2 rotated_uv = vec2(
		uv.x * cos_a - uv.y * sin_a,
		uv.x * sin_a + uv.y * cos_a
	);

	float time_offset = moving ? TIME * speed : 0.0;

	vec3 ray = vec3(rotated_uv * zoom, 1.0);
	float t = -1.0 / ray.z;
	vec2 pos = ray.xy * t;
	pos.y += time_offset;

	vec2 grid = abs(fract(pos) - 0.5);
	float line = min(grid.x, grid.y);
	float glow = pow(1.0 - smoothstep(0.0, line_thickness, line), 2.0) * glow_strength;

	// Opacity falloff from center
	float dist_from_center = length(uv);
	float center_fade = smoothstep(center_falloff_radius, center_falloff_radius + center_falloff_softness, dist_from_center);

	vec3 color = line_color * glow;
	COLOR = vec4(color, alpha * center_fade);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mlyn8"]
shader = SubResource("Shader_yfx1v")
shader_parameter/speed = 0.2
shader_parameter/zoom = 2.121
shader_parameter/line_thickness = 0.024
shader_parameter/glow_strength = 0.629
shader_parameter/line_color = Color(0.285413, 0.581767, 0.531609, 1)
shader_parameter/alpha = 1.0
shader_parameter/moving = true
shader_parameter/angle = 3.497
shader_parameter/center_falloff_radius = 0.0
shader_parameter/center_falloff_softness = 0.001

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_18rtl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sm426"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekjr3"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[node name="ResearcherGrid" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_gm34h")
script = ExtResource("1_rkkng")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="ColorRectBG" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_mlyn8")
layout_mode = 2
color = Color(0.09, 0.09, 0.09, 1)

[node name="SummaryControl" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="SummaryControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_18rtl")

[node name="MarginContainer" type="MarginContainer" parent="SummaryControl/PanelContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 10

[node name="SummaryImage" type="TextureRect" parent="SummaryControl/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 1200)
layout_mode = 2
expand_mode = 4
stretch_mode = 6

[node name="VBoxContainer2" type="VBoxContainer" parent="SummaryControl/PanelContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SummaryControl/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="CostResourceItem" parent="SummaryControl/PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer" instance=ExtResource("3_mlyn8")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sm426")
icon = 31
no_bg = true
title = "999"
display_at_bottom = true
icon_size = Vector2(50, 50)

[node name="IconBtn" parent="SummaryControl/PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer" instance=ExtResource("4_sm426")]
layout_mode = 2
icon = 27
is_hoverable = false

[node name="CostResourceItemDiff" parent="SummaryControl/PanelContainer/MarginContainer/VBoxContainer2/HBoxContainer" instance=ExtResource("3_mlyn8")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ekjr3")
icon = 31
no_bg = true
title = "999"
display_at_bottom = true
is_negative = true
icon_size = Vector2(50, 50)

[node name="GridSelect" parent="." instance=ExtResource("3_40vgl")]
layout_mode = 2

[node name="DetailPanel" parent="." instance=ExtResource("4_wj66r")]
layout_mode = 2
show_room_card = false
show_scp_card = false

[node name="TransistionScreen" parent="." instance=ExtResource("5_i3ues")]
z_index = 1
layout_mode = 2
